2001-08-13  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: chnage "nice value" to "priority" though still
	display priority as "High ( Nice -10 )". Set the tooltip delay
	to be shoter so as to be more noticable

	* interface.c: again change Nice to priority. Add underscores to
	all the menu items. Change window titile to be "Procman System
	Monitor".

	* procdialogs.c: Improve the renice dialog. Use an hscale, put
	a frame around it. Pressing renice button closes the dialog so
	a cancel button is more appropriate

2001-08-07 Kevin Vandersloot <kfv101@psu.edu>

	* interface.c : move the popup menu callbacks back to
	callbacks.c. Add a new menuitem to get info about the
	process. Just tries to man:process name.

	* callbacks.c (popup_menu_about_process): call gnome_url_show
	on the process command name. Perhaps there is a better way.

	* proctable.c (get_process_name): change this to get the
	process name and process command. Thus shortened command names
	should no longer be in procman.

2001-08-07 Kevin Vandersloot <kfv101@psu.edu>

	* interface.c (create_main_window): hook up to the key press
	signal for the e-tree. Also remove a duplicated 
	gtk_signal_connect for the "right_click" signal.

	* callbacks.c (cb_tree_key_press): toggle info tab if 
	return/enter or space bar is pressed

2001-08-07 Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (get_process_nmae): strip the path from the
	arguments string. Now process name show in their full glory.
	(get_info): remove unneeded stuff
	(update_info): update the name just as if icon needs updateing.

	* procactions.c (kill_process): fix spelling of SIGTERM.

	* prettytable.c (...get_name): return NULL if the process does
	not have a .desktop file. 

2001-08-06 Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (get_process_name): new function to get the name.
	Will try to get name from arguments string.

	* interface.c (popup_menu...): declare them as static functions
	because, well.., that's what they are.
