@@ -1,5 +1,13 @@
 2001-08-13  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c (proctable_update_progress_bars): save the 
+	last % CPU and average it with the new pcpu to get a smoother
+	display.
+
+	* interface.c: make the cpu meter timeout be faster
+
+2001-08-13  Kevin Vandersloot <kfv101@psu.edu>
+
 	* infoview.c: chnage "nice value" to "priority" though still
 	display priority as "High ( Nice -10 )". Set the tooltip delay
 	to be shoter so as to be more noticable
